test/toolstest/effect_parser/invalid/15_unterminated_raw_string_in_attr.def
/*
 * Invalid: Unterminated raw string in attribute
 */

struct [[ge::params(type=TEST_UNTERM_RAW_STR, name="TestUnterminatedRaw", pattern=R"(\w+] )]] TestUnterminatedRawStringParams {
    float value1;
    int value2;
};
